intern performer card alignment fixed

--- a/src/app/blog/components/internships/performers/performers.component.css
+++ b/src/app/blog/components/internships/performers/performers.component.css
@@ -8,12 +8,12 @@
 
 .performer__card {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2);
-  min-height: 400px;
+  height: 400px;
   width: 300px;
   display: grid;
   place-items: center;
   place-content: center;
-  grid-template-rows: 200px;
+  grid-template-rows: auto;
   grid-gap: 1em;
 }
 
@@ -22,7 +22,9 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-bottom: 1em;
+  margin-top: 1em;
+  height: 250px;
+  width: 260px;
 }
 
 .performer__card mat-card-header mat-card-title {
@@ -39,6 +41,7 @@
 }
 
 .performer__card mat-card-content blockquote {
-  font-size: medium;
+  font-size: 1em;
   text-align: center;
+  height: 150px;
 }
